<resources>
    <string-array name="WheelArrayDefault">
        <item>AigeStudio</item>
        <item>Aige</item>
        <item>爱哥</item>
        <item>الحب  اخي</item>
        <item>jeg elsker</item>
        <item>사랑해요 형</item>
        <item>Amor de irmão</item>
        <item>armastan</item>
        <item>愛の兄</item>
        <item>обичам те</item>
        <item>любовь - братa</item>
        <item>miłość bracie</item>
        <item>Liebe</item>
        <item>Lamour</item>
        <item>rakastan sinua</item>
        <item>láska..</item>
        <item>dragostea.</item>
        <item>jag älskar</item>
        <item>ljubezen, brat.</item>
        <item>愛哥</item>
        <item>ชอบพี่</item>
        <item>αγάπη μου</item>
        <item>a szerelem.</item>
        <item>Amore, fratello.</item>
    </string-array>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="create">Create</string>
    <string name="share_app">Share App</string>
    <string name="hide_loker">Hide Loker</string>
    <string name="cancel">Cancel</string>
    <string name="create_album">Create album</string>
    <string name="set_security_question">Set security question</string>
    <string name="help_you_reset_your_password_when_you_forget_it">Help you reset your password when you forget it</string>
    <string name="what_s_your_favorite_color">What\'s your favorite color?</string>
    <string name="save">Save</string>
    <string name="title_add_contact">Add contact</string>
    <string name="messages">Messages</string>
    <string name="send_mail">Send Mail</string>
    <string name="calendar">Calendar</string>
    <string name="web">Web</string>
    <string name="settings">Settings</string>
</resources>