<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@android:color/transparent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="@dimen/_14sdp"
            android:paddingTop="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:paddingBottom="@dimen/_14sdp">

            <TextView
                android:id="@+id/tvSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_bold"
                android:includeFontPadding="false"
                android:text="@string/set_security_question"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/sans_regular"
                android:includeFontPadding="false"
                android:text="@string/help_you_reset_your_password_when_you_forget_it"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <LinearLayout
                android:id="@+id/llQuesation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/securitysamsungripple"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/sans_medium"
                    android:gravity="start"
                    android:text="@string/what_s_your_favorite_color"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/ivReset"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_gravity="center"
                    android:scaleY="-1"
                    android:src="@drawable/top_arrow"
                    android:tint="@color/black" />

            </LinearLayout>

            <EditText
                android:id="@+id/edAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/_50_rounded_shape"
                android:backgroundTint="#E7E7E7"
                android:hint="Enter the answer"
                android:padding="@dimen/_10sdp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="#424242"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/_50_rounded_shape"
                android:backgroundTint="@color/blue_color_picker"
                android:fontFamily="@font/sans_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/_35sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:backgroundTint="@color/blue_color_picker"
                android:fontFamily="@font/sans_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/_35sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textColor="#898989"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
