<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/editContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_2sdp">

                <ImageView
                    android:id="@+id/editIcon"
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:padding="@dimen/_12sdp"
                    android:src="@drawable/ic_person_add_black_24dp"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_add_contact"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_2sdp">

                <ImageView
                    android:id="@+id/smsIcon"
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:padding="@dimen/_12sdp"
                    android:src="@drawable/ic_tab_msg_my"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/smsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/messages"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/sendMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_2sdp">

                <ImageView
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:padding="@dimen/_12sdp"
                    android:src="@drawable/ic_mail_my"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/send_mail"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_2sdp">

                <ImageView
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:padding="@dimen/_12sdp"
                    android:src="@drawable/ic_calender1"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/calendar"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_2sdp">

                <ImageView
                    android:layout_width="@dimen/_42sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:padding="@dimen/_12sdp"
                    android:src="@drawable/ic_web"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/web"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
