<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@android:color/transparent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="@dimen/_14sdp"
            android:paddingTop="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_bold"
                android:text="@string/create_album"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="Enter album name"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="#BFBFBF"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/samsungripple"
                    android:layout_weight="1"
                    android:fontFamily="@font/sans_bold"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvCreate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/samsungripple"
                    android:fontFamily="@font/sans_bold"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/create"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
